Arregla tests y views

--- a/app/templates/app/event_detail.html
+++ b/app/templates/app/event_detail.html
@@ -14,7 +14,7 @@
                         </div>
                         <div>
                             <h6 class="mb-0">Fecha y Hora</h6>
-                            <p class="mb-0">{{ event.scheduled_at|date:"l, j \\d\\e F \\d\\e Y, H:i" }}</p>
+                            <p class="mb-0">{{ event.date|date:"l, j \\d\\e F \\d\\e Y, H:i" }}</p>
                         </div>
                     </div>
                 </div>
