--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,6 +47,9 @@
                             <li class="nav-item">
                                 {% navbar_link 'events' 'Eventos' %}
                             </li>
+                            <li class="nav-item">
+                                {% navbar_link 'notifications' 'Notificaciones' %}
+                            </li>
                         </ul>
                     </div>
             </div>
