--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,6 +50,10 @@
                             <li class="nav-item">
                                 {% navbar_link 'notifications' 'Notificaciones' %}
                             </li>
+                            </li>
+                            <li class="nav-item">
+                                {% navbar_link 'tickets' 'Tickets' %}
+                            </li>
                         </ul>
                     </div>
             </div>
