agregamos Login y Register

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,6 +54,9 @@
                             <li class="nav-item">
                                 {% navbar_link 'tickets' 'Tickets' %}
                             </li>
+                            <li class="nav-item">
+                                {% navbar_link 'login' 'Iniciar Sesion' %}
+                            </li>
                         </ul>
                     </div>
             </div>
