Prototipo de registro y login del usuario, redirigido a su perfil

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -57,6 +57,10 @@
                             <li class="nav-item">
                                 {% navbar_link 'login' 'Iniciar Sesion' %}
                             </li>
+                            </li>
+                            <li class="nav-item">
+                                {% navbar_link 'register' 'Registrarse' %}
+                            </li>
                         </ul>
                     </div>
             </div>
