--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <div class="container">
     <h2>Iniciar Sesión</h2>
     <form method="POST">
@@ -6,3 +10,5 @@
         <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
     </form>
 </div>
+
+{% endblock %}
