--- a/app/templates/app/register.html
+++ b/app/templates/app/register.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <div class="container">
     <h2>Registro</h2>
     <form method="POST">
@@ -6,3 +10,5 @@
     <button type="submit" class="btn btn-primary">Registrarse</button>
     </form>
 </div>
+
+{% endblock %}
