--- a/app/templates/app/event_detail.html
+++ b/app/templates/app/event_detail.html
@@ -7,6 +7,7 @@
             <div class="card-body">
                 <h5 class="card-title">Detalles del Evento</h5>
                 <p class="card-text">{{ event.description }}</p>
+
                 <div class="mt-4">
                     <div class="d-flex align-items-center mb-3">
                         <div class="bg-light rounded-circle p-2 me-3">
@@ -16,8 +17,19 @@
                             <h6 class="mb-0">Fecha y Hora</h6>
                             <p class="mb-0">{{ event.date|date:"l, j \\d\\e F \\d\\e Y, H:i" }}</p>
                         </div>
+                    </div> 
+                    <div class="d-flex align-items-center mb-3">
+                        <div class="bg-light rounded-circle p-2 me-3">
+                            <i class="bi bi-wallet text-success me-2"></i>
+                        </div>
+                        <div>
+                            <h6 class="mb-0"><strong></strong>Precios</strong></h6>
+                            <p class="mb-0">General: ${{ event.prize|floatformat:2 }}</p>
+                            <p class="mb-0">VIP: ${{ event.precio_vip|floatformat:2 }}</p>
+                        </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
