--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -60,8 +60,10 @@
                                 <li class="nav-item">
                                     {% navbar_link 'notifications' 'Notificaciones' %}
                                 </li>
+                                
+                                
                                 <li class="nav-item">
-                                    {% navbar_link 'tickets' 'Tickets' %}
+                                    {% navbar_link 'profile' 'Mi cuenta' %}
                                 </li>
                                 <li class="nav-item">
                                     {% navbar_link 'logout' 'Cerrar Sesión' %}
