--- a/app/templates/app/account/profile.html
+++ b/app/templates/app/account/profile.html
@@ -6,7 +6,7 @@
   <p>Usuario: {{user.username}}</p>
   <p>Mail: {{user.email}}</p>
 </div>
-<div class="mt-4">
+<div class="container mt-4">
   <a href="{% url 'tickets' %}" class="btn btn-primary">Ver mis tickets</a>
 </div>
 
