--- a/panel_admin/templates/panel_admin/comments_list.html
+++ b/panel_admin/templates/panel_admin/comments_list.html
@@ -3,9 +3,14 @@
 {% block content %}
 <h2>Listado de Comentarios</h2>
 <ul>
+  {% if comments %}
+    <li><strong>Comentarios:</strong></li>
+  {% else %}
+    <li>No hay comentarios disponibles.</li>
+  {% endif %}
   {% for comment in comments %}
     <li>{{ comment.user.username }}: {{ comment.text }} 
-        <a href="{% url 'comment_delete' comment.pk %}">Eliminar</a>
+        <a href="{% url 'panel_admin:comment_delete' comment.pk %}">Eliminar</a>
     </li>
   {% endfor %}
 </ul>
