Listado, edicion, eliminacion y creacion de venues y eliminacion de categorias

--- a/panel_admin/templates/panel_admin/dashboard.html
+++ b/panel_admin/templates/panel_admin/dashboard.html
@@ -22,6 +22,6 @@
   <a class="btn btn-primary" href="{% url 'panel_admin:comments_list' %}">Comentarios</a>
 
 {% else %}
-  <p>No tenés permisos especiales. Volvé a la <a href="/">página principal</a>.</p>
+  <p>Este sitio es solo para administradores o vendedores. Volvé a la <a href="/">página principal</a>.</p>
 {% endif %}
 {% endblock %}
