--- a/panel_admin/templates/panel_admin/venues_list.html
+++ b/panel_admin/templates/panel_admin/venues_list.html
@@ -2,7 +2,7 @@
 
 {% block title %}Listado de Lugares{% endblock %}
 {% block content %}
-<h2>Gestion de Lugares</h2>
+<h2>Gestión de Lugares</h2>
 <a href="{% url 'panel_admin:venue_add' %}">+Agregar nuevo lugar</a>
 <ul>
     {% if venues %}
