--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,6 +70,9 @@
                             <li class="nav-item">
                                 {% navbar_link 'events' 'Eventos' %}
                             </li>
+                            <li class="nav-item">
+                                {% navbar_link 'panel_admin:admin_dashboard' 'Administradores y Vendedores' %}
+                             </li>
                             {% if request.user.is_anonymous %}
                                 
                                 <li class="nav-item">
